--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -2,7 +2,7 @@
   .nav-items {
     font-size: 15px;
   }
-  .content-head {
+  .bannerPart1-content-head {
     font-size: 2.5rem;
   }
   .content-text {
@@ -52,11 +52,11 @@
   }
 }
 @media screen and (max-width: 820px) {
-  .section-1 {
+  .bannerPart1 {
     display: block;
     height: 1000px;
   }
-  .content {
+  .bannerPart1-content {
     width: 100%;
     height: 500px;
   }
@@ -82,7 +82,7 @@
     line-height: 30px;
     padding: 30px;
   }
-  .Btn {
+  .buttonF {
     margin-left: 0px;
     margin-top: 20px;
     display: flex;
@@ -119,11 +119,11 @@
     margin-top: 5px;
     padding: 20px;
   }
-  .Btn {
+  .buttonF {
     margin-top: 10px;
     padding: 10px;
   }
-  .text-middle {
+  .boldHeader {
     font-size: 2rem;
   }
 }
@@ -136,22 +136,22 @@
     font-size: 12px;
     padding: 10px;
   }
-  .Btn {
+  .buttonF {
     margin-top: 5px;
     padding: 10px;
   }
-  .text-middle {
+  .boldHeader {
     font-size: 1.5rem;
   }
 }
 @media screen and (max-width: 1250px) {
-  .text-1 {
+  .p-1 {
     width: 60%;
     height: 60%;
   }
 }
 @media screen and (max-width: 420px) {
-  .text-1 {
+  .p-1 {
     width: 70%;
     height: 60%;
     background-color: #ff6483ad;
