--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ input[type="checkbox"] {
 
   /* position: absolute; */
 }
-.section-1 {
+.bannerPart1 {
   width: 100%;
   height: 600px;
   background-color: #faaca8;
@@ -50,7 +50,7 @@ input[type="checkbox"] {
   display: flex;
   overflow: hidden;
 }
-.content {
+.bannerPart1-content {
   width: 50%;
   height: 100%;
 }
@@ -91,7 +91,7 @@ input[type="checkbox"] {
   box-sizing: border-box;
   line-height: 30px;
 }
-.Btn {
+.buttonF {
   padding: 20px;
   margin-left: 50px;
   margin-top: 40px;
@@ -140,7 +140,7 @@ input[type="checkbox"] {
   justify-content: flex-start;
   align-items: center;
 }
-.street {
+.path {
   width: 35%;
   height: 70%;
 }
@@ -156,7 +156,7 @@ input[type="checkbox"] {
   transform: scale(1.03);
   cursor: pointer;
 }
-.street-1 {
+.roadsideGroup {
   width: 100%;
   height: 49%;
   background-image: url("Assets/pexels-rachel-claire-6752433.jpg");
@@ -164,34 +164,34 @@ input[type="checkbox"] {
   background-position: center;
   margin-bottom: 8px;
 }
-.street-2 {
+.singlePath {
   width: 100%;
   height: 49%;
   background-image: url("Assets/pexels-eva-bronzini-6141651.jpg");
   background-size: cover;
   background-position: center;
 }
-.street-1:hover {
+.roadsideGroup:hover {
   transition: transform 1s;
   transform: scale(1.03);
   cursor: pointer;
 }
-.street-2:hover {
+.singlePath:hover {
   transition: transform 1s;
   transform: scale(1.03);
   cursor: pointer;
 }
-.text-1 {
+.p-1 {
   width: 70%;
   height: 40%;
   background-color: #ff6483;
 }
-.text-start {
+.simpleHeader {
   padding: 25px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
-.text-middle {
+.boldHeader {
   padding: 25px;
   padding-top: 0px;
   font-family: Arial, Helvetica, sans-serif;
@@ -200,7 +200,7 @@ input[type="checkbox"] {
   letter-spacing: 4px;
   padding-bottom: 20px;
 }
-.text-end {
+.arrowSymbol {
   padding: 25px;
   padding-top: 0px;
   font-family: Arial, Helvetica, sans-serif;
